fix overflow

--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -456,6 +456,11 @@
 
 /* --------------- 12000px ---------------------- */
 @media (min-width: 1200px) {
+  body {
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+  }
 
   .homepage_hero,
   .header-form {
